# Cpp-Cache

./: CMakeLists.txt  HashLruCache.h  KICachePolicy.h  LfuCache.h  LruCache.h  LruKCache.h  README.md  lfu_test  lru_cache  lru_cache_simple  lru_cache_simple.cpp  lruk_cache  main.cpp  test_main
test/: CMakeLists.txt  test_FreqList.cpp  test_LruCache.cpp  test_LruKCache.cpp
